--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Calculator</title>
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<script type="text/javascript" src="assets/js/calculator.js"></script>
 <!--WEB APP-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#000000"/>
