--- a/index.html
+++ b/index.html
@@ -33,10 +33,16 @@
 <body ontouchstart="">
 	<input class="display" type="text" readonly size="18" id="d">
 	<div class="keys">
+		<button class="button operator" onclick="Calculator.type(Math.PI)">π</button>
+		<button class="button operator" onclick="Calculator.square()">x^2</button>
+		<button class="button operator" onclick="Calculator.squareRoot()">√</button>
+		<button class="button operator" onclick="Calculator.type('**')">^</button>
+		<button class="button operator" onclick="Calculator.type('(')">(</button>
+		<button class="button operator" onclick="Calculator.type(')')">)</button>
 		<button class="button function" onclick="Calculator.clearMem();">mc</button>
 		<button class="button function" onclick="Calculator.recallMem();">mr</button>
 		<button class="button function" onclick="Calculator.saveMem();">ms</button>
-		<button class="button operator" onclick="Calculator.type('/')">/</button>
+		<button class="button operator" onclick="Calculator.type('/')">÷</button>
 		<button class="button number" onclick="Calculator.type('7')">7</button>
 		<button class="button number" onclick="Calculator.type('8')">8</button>
 		<button class="button number" onclick="Calculator.type('9')">9</button>
@@ -53,6 +59,7 @@
 		<button class="button number" onclick="Calculator.type('.')">.</button>
 		<button class="button function" onclick="Calculator.display('')">C</button>
 		<button class="button operator" onclick="Calculator.e()">=</button>
+
 	</div>
   <script>
   if ('serviceWorker' in navigator) {
