--- a/index.html
+++ b/index.html
@@ -33,32 +33,34 @@
 <body ontouchstart="">
 	<input class="display" type="text" readonly size="18" id="d">
 	<div class="keys">
-		<button class="button operator" onclick="Calculator.type(Math.PI)">π</button>
-		<button class="button operator" onclick="Calculator.square()">x^2</button>
-		<button class="button operator" onclick="Calculator.squareRoot()">√</button>
-		<button class="button operator" onclick="Calculator.type('**')">^</button>
-		<button class="button operator" onclick="Calculator.type('(')">(</button>
-		<button class="button operator" onclick="Calculator.type(')')">)</button>
 		<button class="button function" onclick="Calculator.clearMem();">mc</button>
 		<button class="button function" onclick="Calculator.recallMem();">mr</button>
 		<button class="button function" onclick="Calculator.saveMem();">ms</button>
-		<button class="button operator" onclick="Calculator.type('/')">÷</button>
+		<button class="button function" onclick="Calculator.display('')">C</button>
+		<button class="button operator" onclick="Calculator.type(Math.PI)">π</button>
+		<button class="button operator" onclick="Calculator.type('*10**')">e</button>
+		<button class="button operator" onclick="Calculator.type('(')">(</button>
+		<button class="button operator" onclick="Calculator.type(')')">)</button>
+		<button class="button operator" onclick="Calculator.square()">x^2</button>
+		<button class="button operator" onclick="Calculator.cube()">x^3</button>
+		<button class="button operator" onclick="Calculator.type('**')">^</button>
+		<button class="button operator" onclick="Calculator.squareRoot()">√</button>
 		<button class="button number" onclick="Calculator.type('7')">7</button>
 		<button class="button number" onclick="Calculator.type('8')">8</button>
 		<button class="button number" onclick="Calculator.type('9')">9</button>
-		<button class="button operator" onclick="Calculator.type('*')">×</button>
+		<button class="button operator" onclick="Calculator.type('/')">÷</button>
 		<button class="button number" onclick="Calculator.type('4')">4</button>
 		<button class="button number" onclick="Calculator.type('5')">5</button>
 		<button class="button number" onclick="Calculator.type('6')">6</button>
-		<button class="button operator" onclick="Calculator.type('-')">-</button>
+		<button class="button operator" onclick="Calculator.type('*')">×</button>
 		<button class="button number" onclick="Calculator.type('1')">1</button>
 		<button class="button number" onclick="Calculator.type('2')">2</button>
 		<button class="button number" onclick="Calculator.type('3')">3</button>
-		<button class="button operator" onclick="Calculator.type('+')">+</button>
+		<button class="button operator" onclick="Calculator.type('-')">-</button>
 		<button class="button number" onclick="Calculator.type('0')">0</button>
 		<button class="button number" onclick="Calculator.type('.')">.</button>
-		<button class="button function" onclick="Calculator.display('')">C</button>
 		<button class="button operator" onclick="Calculator.e()">=</button>
+		<button class="button operator" onclick="Calculator.type('+')">+</button>
 
 	</div>
   <script>
